--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social-network-api",
+  "name": "social-network-api-mongoose-express-js-james",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jpd61/social-network-api.git"
+    "url": "git+https://github.com/Okingiboy/social-network-api-mongoose-express-js-james.git"
   },
-  "author": "Joseph DeWoody",
+  "author": "James Chukwu",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jpd61/social-network-api/issues"
+    "url": "https://github.com/Okingiboy/social-network-api-mongoose-express-js-james/issues"
   },
-  "homepage": "https://github.com/jpd61/social-network-api#readme",
+  "homepage": "https://github.com/Okingiboy/social-network-api-mongoose-express-js-james#readme",
   "dependencies": {
     "express": "^4.17.1",
     "moment": "^2.27.0",
