--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon server.js"
-  },
+    "start": "node server.js"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Okingiboy/social-network-api-mongoose-express-js-james.git"
